<resources>
    <string name="app_name">Foody</string>
    <string name="dangtai">Đang tải...</string>
    <string name="phienban">Version</string>
    <string name="tencongty">buivanphuc@gmail.com</string>
    <string name="email">Email</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="hoac">Hoặc</string>
    <string name="dangNhapBangGoogle">Đăng nhập bằng google</string>
    <string name="dangNhapBangFacebook">Đăng nhập bằng facebook</string>
    <string name="quenmatkhau">Quên mật khẩu?</string>
    <string name="dangky"><i>Đăng ký</i> </string>
    <string name="dangkymoi"><i>Đăng ký mới</i> </string>
    <string name="banChuaNhap">Bạn chưa nhập</string>
    <string name="thongBaoNhapLaiMatKhau">Mật khẩu không trùng khớp</string>
    <string name="thongBaoDangKyThanhCong">Đăng ký thành công</string>
    <string name="thongBaoDangKyThatBai">Đăng ký thất bại</string>
    <string name="dang_xu_ly">Đang xử lý...</string>

    <string name="dang_nhap_that_bai">Đăng nhập thất bại</string>
    <string name="chua_nhap_email">Chưa nhập Email</string>
    <string name="chua_nhap_pass">Chưa nhập mật khẩu</string>
    <string name="khoi_phuc_mk">Khôi phục mật khẩu</string>
    <string name="gui_mail">Gửi Email</string>
    <string name="email_k_hop_le">Email không hợp lệ</string>
    <string name="gui_emai_thanh_cong">Gửi Email thành công</string>

    <string name="an_gi">Ăn gì</string>
    <string name="o_dau">Ở đâu</string>
    <string name="moi_nhat">Mới nhất</string>
    <string name="danh_muc">Danh mục</string>
    <string name="khu_vuc">Khu Vực</string>

    <string name="gan_toi">Gần tôi</string>
    <string name="giao_hang">Giao hàng</string>
    <string name="game_and_fun">Game and Fun</string>
    <string name="danh_gia">Đánh giá</string>
    <string name="blogs">Blogs</string>
    <string name="topmember">Top thành viên</string>
    <string name="datmon">Đặt món</string>

    <string name="taianh">Tải ảnh</string>
    <string name="checkin">Check in</string>
    <string name="binhluan">Bình luận</string>
    <string name="luulai">Lưu lại</string>
    <string name="chiase">Chia sẻ</string>

    <string name="dang_mo_cua">Đang mở cửa</string>
    <string name="da_dong_cua">Đã đóng cửa</string>

    <string name="api">AIzaSyCbc8u3Kt1xxkz8f2MuizvRZraEiBg13wc</string>
    <string name="capnhatwifi">Cập nhật wifi</string>
    <string name="nhaptenwifi">Tên Wifi</string>
    <string name="nhapmatkhauwifi">Mật khẩu</string>
    <string name="dongy">Đồng ý</string>

    <string name="dang">Đăng</string>
    <string name="viet_binh_luan">Viết bình luận</string>
    <string name="hint_tieude_bl">Tiêu đề ( không bắt buộc )</string>
    <string name="hint_noidung_bl">Viết trên 100 từ, đúng chính tả, ngôn từ văn hóa, không spam ... để được điểm thưởng</string>

    <string name="thucdon">Thực đơn</string>
    <string name="tenquanan">Tên quán ăn</string>
    <string name="giatoida">Giá tối đa</string>
    <string name="giatoithieu">Giá tối thiểu</string>
    <string name="giaohang">Giao hàng</string>
    <string name="khonggiaohang">Không gia hàng</string>
    <string name="giomocua">Giờ mở cửa</string>
    <string name="giodongcua">Giờ đóng cửa</string>
    <string name="luuquanan">Lưu quán ăn</string>
</resources>
