<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparenBackground"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <ImageView
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:src="@drawable/foodytext" />

        <EditText
            android:id="@+id/edtEmailDangNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/email"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edtPassWordDangNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/matkhau"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnDangNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/radius_button"
            android:text="@string/dangnhap"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:text="@string/hoac"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/backGroundFb"
            android:drawableLeft="@drawable/icon_facebook"
            android:paddingLeft="@dimen/_5sdp"
            android:text="@string/dangNhapBangFacebook"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/icon_google"
            android:paddingLeft="@dimen/_10sdp"
            android:text="@string/dangNhapBangGoogle"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtQuenMatKhau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quenmatkhau"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/txtDangKy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/dangky"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>