<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparenBackground"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">


        <TextView
            android:layout_marginTop="@dimen/_100sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:text="@string/khoi_phuc_mk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtEmailKP"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_email_white_24dp"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/email"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnDangKy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/radius_button"
            android:text="@string/gui_mail"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />
        <TextView
            android:id="@+id/txtDangKyMoi"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/white"
            android:text="@string/dangkymoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</FrameLayout>