<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">
        <ImageView
            android:id="@+id/imgBack"
            android:src="@drawable/ic_back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp" />

        <TextView
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viet_binh_luan"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:textSize="@dimen/_15sdp"
            android:id="@+id/txtDangBinhLuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:text="@string/dang"
            android:textColor="@color/colorAccent" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bg_trangchu"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/txtTenQuanAn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDiaChiQuanAn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <EditText
        android:padding="@dimen/_5sdp"
        android:id="@+id/edTieuDeBinhLuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:hint="@string/hint_tieude_bl"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_bg_trangchu" />

    <EditText
        android:padding="@dimen/_5sdp"
        android:id="@+id/edNoiDungBinhLuan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/hint_noidung_bl"
        android:textSize="15sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerChonHinhBinhLuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_bg_trangchu">

        <ImageButton
            android:id="@+id/btnChonHinh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_bg_trangchu"
            android:src="@drawable/ic_photo_camera_black_24dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_bg_trangchu"
            android:src="@drawable/ic_label_black_24dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_bg_trangchu"
            android:src="@drawable/ic_stars_black_24dp" />

    </LinearLayout>

</LinearLayout>